# librescc

./: .SRCINFO  CMakeLists.txt  PKGBUILD  README.md  librescc-1.0.0.tar.xz
assets/: librescc.desktop
aur/librescc/: PKGBUILD
aur/librescc-git/: PKGBUILD
include/: audio_engine.h  common.h  instrument_map.h  midi_file.h  player.h  synth_engine.h  ui.h
man/: librescc.1
src/: audio_engine.cpp  instrument_map.cpp  main.cpp  midi_file.cpp  player.cpp  synth_engine.cpp  ui.cpp
test-midi/: flowr_test.mid
tests/: CMakeLists.txt  test_midi_parser.cpp  test_player.cpp  test_synth_engine.cpp
tools/: gen_test_midi.py
